Made the instruction panel borders rounded